<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.Step4Activity">

    <include
        android:id="@+id/appbar"
        layout="@layout/custom_action_layout"/>

    <TextView
        android:id="@+id/tv_step2"
        style="@style/Text.BoldBlack"
        android:text="@string/step4"
        android:layout_below="@id/appbar"/>

    <TextView
        android:id="@+id/tv_quest"
        style="@style/Text.Black"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/silahkan_centang"
        android:layout_below="@+id/tv_step2"/>

    <CheckBox
        android:id="@+id/checkBox_diabetes"
        style="@style/Checkbox"
        android:layout_marginTop="10dp"
        android:text="@string/diabetes"
        android:onClick="selectItem"
        android:layout_below="@+id/tv_quest"/>

    <CheckBox
        android:id="@+id/checkBox_jantung"
        style="@style/Checkbox"
        android:text="@string/hipertensi"
        android:onClick="selectItem"
        android:layout_below="@id/checkBox_diabetes"/>

    <CheckBox
        android:id="@+id/checkBox_hipertensi"
        style="@style/Checkbox"
        android:text="@string/jantung"
        android:onClick="selectItem"
        android:layout_below="@id/checkBox_jantung"/>

    <CheckBox
        android:id="@+id/checkBox_alergi"
        style="@style/Checkbox"
        android:text="@string/alergi"
        android:onClick="selectItem"
        android:layout_below="@id/checkBox_hipertensi" />

    <CheckBox
        android:id="@+id/checkBox_tidak_ada"
        style="@style/Checkbox"
        android:text="@string/tidak_ada"
        android:onClick="selectItem"
        android:layout_below="@id/checkBox_alergi"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_4"
        style="@style/Button.Blue"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:text="@string/next"
        android:layout_below="@id/checkBox_tidak_ada" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_below="@id/btn_next_4"
        android:gravity="center"
        android:text="hasil"/>

</RelativeLayout>