<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailDokterFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/custom_action_layout"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_photo_detail_dokter"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar" />

    <TextView
        android:id="@+id/tv_nama_detail_dokter"
        style="@style/Text.Semibold"
        android:layout_marginTop="10dp"
        android:gravity="center"
        tools:text="@string/contoh_nama"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo_detail_dokter" />

    <TextView
        android:id="@+id/tv_email_detail_dokter"
        style="@style/Text"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        tools:text="@string/email_contoh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_detail_dokter" />

    <TextView
        android:id="@+id/tv_about"
        style="@style/Text.Semibold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_detail_dokter" />

    <TableLayout
        android:id="@+id/tab_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/Text"
                android:text="@string/nip" />

            <TextView
                android:id="@+id/tv_nip"
                style="@style/Text.Black"
                tools:text="@string/contoh_nip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/Text"
                android:text="@string/sip"/>

            <TextView
                android:id="@+id/tv_sip"
                style="@style/Text.Black"
                tools:text="@string/contoh_sip" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <TextView
                style="@style/Text"
                android:text="@string/str" />

            <TextView
                android:id="@+id/tv_str"
                style="@style/Text.Black"
                tools:text="@string/contoh_str"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>