<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.Step3Activity">

    <include
        android:id="@+id/appbar"
        layout="@layout/custom_action_layout"/>

    <TextView
        android:id="@+id/tv_step2"
        style="@style/Text.BoldBlack"
        android:text="@string/step3"
        android:layout_below="@id/appbar"/>

    <TextView
        android:id="@+id/tv_quest"
        style="@style/Text.Black"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/pengobatan"
        android:layout_below="@id/tv_step2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_isian"
        style="@style/TextInputLayout.clear"
        android:layout_marginTop="16dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        android:layout_below="@+id/tv_quest">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_isian_step3"
            style="@style/TextInputEditText.inputTextMulti"
            android:hint="@string/isi"
            android:scrollbars="vertical"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_3"
        style="@style/Button.Blue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/next"
        android:layout_below="@id/til_isian"/>
</RelativeLayout>