<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.Step2Activity">

    <include
        android:id="@+id/appbar"
        layout="@layout/custom_action_layout"/>

    <TextView
        android:id="@+id/tv_step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/step2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_below="@+id/appbar"/>

    <TextView
        android:id="@+id/tv_quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/keluhan"
        android:textColor="@color/black"
        android:fontFamily="@font/opensans_regular"
        android:layout_below="@id/tv_step2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_isian"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text"
        android:layout_below="@+id/tv_quest">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_isian_step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/opensans_regular"
            android:hint="@string/isi"
            android:inputType="text|textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/background_btn_blue"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:layout_below="@id/til_isian"/>

</RelativeLayout>